--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Vivek Kale's Curriculum Vitae</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="http://docs.google.com/gview?url=<https://github.com/vivek224/ViveksCV/>&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="http://docs.google.com/gview?url=<https://github.com/ViveksCV/cv.pdf>&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
